--- a/panaderia-el-foro/index.html
+++ b/panaderia-el-foro/index.html
@@ -37,7 +37,7 @@
        <ul>
          <h3>CONTACTA CON NOSOTROS</h3>
 
-         <h5 class = "telf" > &#x260f; 630 619 816 &#x2709; @gmail.com</h5>
+         <h5 class = "telf" > &#x260f; 630 619 816 &#x2709; placi0474@gmail.com</h5>
 
          <p> Manuel Valdés, 3 45222  Borox (Toledo) </p>
 
