Añadido boton inicio

--- a/panaderia-el-foro/bolleria.html
+++ b/panaderia-el-foro/bolleria.html
@@ -20,6 +20,7 @@
         <br> Todos nuestros productos son elaborados SIN ACEITE DE PALMA.
 
        </p>
+       <p><a class="boton_init" href="index.html" > Volver</a></p>
     </div>
   </<body>
 
