--- a/panaderia-el-foro/panaderia.html
+++ b/panaderia-el-foro/panaderia.html
@@ -11,7 +11,12 @@
         <h2 style="margin-top:100px; font-size: 40px; ">PAN ELABORADO DIARIAMENTE CON MASA MADRE</h2>
         <p style=" float: right; font-size: 20px;  font-style: oblique;  font-family: Latin Modern Roman 10; "> Tenemos una gran variedad de panes: Pistolas&#9733;, Espiga,  Chapata, Tornillo,<br> Gallegas&#9733; y Candeal (Cachitos, Fabiolas y Colones).
            <br>Además de nuestro pan 100% integral, también hacemos panes especiales XXL, <br>Largos, Redondos y Sin Sal. ¡El mejor pan siempre recién hecho!  </p>
+           <p><a class="boton_init" href="index.html" > Volver</a></p>
+
+
       </div>
+
+
   </<body>
 
 </html>
