--- a/panaderia-el-foro/pasteleria.html
+++ b/panaderia-el-foro/pasteleria.html
@@ -26,6 +26,7 @@
       <br>&#9733; En Verano realizamos unas tartas congeladas tipo mousse que ... ¡están riquísimas!
       <br>&#9733; Para el día de Reyes Magos: También hacemos Roscón de Reyes por encargo.
       </p>
+      <p><a class="boton_init" href="index.html" > Volver</a></p>
     </div>
 
   </<body>
