--- a/panaderia-el-foro/bolleria.html
+++ b/panaderia-el-foro/bolleria.html
@@ -16,7 +16,7 @@
        y que mejor que con un dulce recién hecho, <br> nuestra oferta varía cada día, hacemos Donunts, Pepitos,
          Palmeras&#9733; grandes y pequeñas, con y sin chocolate, tartitas de manzana y hojaldre, milhojas.
         <br> Para que haya variedad de desayunos casi siempre disponemos de Galletas, Croisants&#9733;, Magdalenas&#9733; y Rosquillas.
-        <br> tenemos una variedad de productos envasados Sin Azúcar. ¡También están deliciosos!
+        <br> Además tenemos una variedad de productos envasados Sin Azúcar. ¡También están deliciosos!
         <br>
 
        </p>
